fix(users): Fix Firefox not showing avatars

--- a/apps/app/src/app/components/todo-item/todo-item.component.scss
+++ b/apps/app/src/app/components/todo-item/todo-item.component.scss
@@ -34,7 +34,7 @@ button:has(.avatar-image) {
   }
 
   .avatar-image {
-    width: 100%;
+    width: 42px;
     aspect-ratio: 1 / 1;
     object-fit: cover;
     border-radius: 50%;
