--- a/apps/app/src/app/components/users-list/users-list.component.scss
+++ b/apps/app/src/app/components/users-list/users-list.component.scss
@@ -13,7 +13,7 @@ button {
   }
 
   .avatar-image {
-    width: 100%;
+    width: 50px;
     aspect-ratio: 1 / 1;
     object-fit: cover;
     border-radius: 50%;
